server/dashboard/static/global.css
body {
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
}

.hidden {
    display: none !important;
}

.error {
    color: red !important;
}

.content {
    width: 100%;
    height: 100%;

    padding-top: 10px;
    padding-left: 15px;
    padding-right: 15px;
}

.content p {
    padding-top: 5px;
}

label {
    font-size: 15px;
}

.section {
    border: 1px solid #ccc;
    min-height: 64px;
    padding-left: 24px;
    padding-right: 24px;
}

.section.finished {
    background-color: #777;
}

.section p.info {
    font-size: 12px;
}

.topnav {
    background-color: #777;
    overflow: hidden;
}

.topnav a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.topnav a:hover {
    background-color: #ddd;
    color: black;
}

.topnav a.active {
    background-color: #444;
    color: white;
}

.topnav a.active:hover {
    background-color: #555;
    color: white;
}

